--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Weight of Fish"
-author: "Your Name"
-date: "Year 2020"
+author: "Alex Bell"
+date: "April 10, 2021"
 output: 
   html_document:
     number_sections: true
@@ -13,6 +13,11 @@ output:
 require(tigerstats)
 require(tidyverse)
 ```
+
+```{r}
+Fishydata=read.csv(file="Fish.csv")
+```
+
 
 # Introduction
 
