--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -72,7 +72,7 @@ subsets(regsubsets.out,statistic="adjr2",legend="bottomright",main="Adjusted R^2
   
 ##Which is best??  
 
-The best model utilizes two variables: Height, and Weight.
+The best model utilizes two variables: H, and W.
 
 
 ```{r}
@@ -143,7 +143,29 @@ subsets(regsubsets.out,statistic="adjr2",legend="bottomright",main="Adjusted R^2
 
 ## Which is best??
 
-The best model is the one
+The best model is the one that utilizes three variables: L1, H, and W.
+
+```{r}
+which.max(summary.out$adjr2)
+```
+```{r}
+summary.out$which[3,]
+```
+
+```{r}
+best.model <- lm(Weight~Height+Width,data=Breamdata)
+Fullup <- lm(Weight~.,data=Breamdata)
+summary(best.model)
+```
+
+```{r}
+anova(Fullup, best.model)
+```
+
+
+The P-Value is too large to say there is a difference between utilizing the best model which utilizes three variables and the best model that utilizes two.
+
+
 # SMELT
 ## Methods
 
@@ -187,6 +209,33 @@ as.data.frame(summary.out$outmat)
 library(car)
 subsets(regsubsets.out,statistic="adjr2",legend="bottomright",main="Adjusted R^2")
 ```
+
+## Which is best??
+
+```{r}
+which.max(summary.out$adjr2)
+```
+```{r}
+summary.out$which[3,]
+```
+
+```{r}
+best.model <- lm(Weight~Height+Width,data=Smeltdata)
+Fullup <- lm(Weight~.,data=Smeltdata)
+summary(best.model)
+```
+
+```{r}
+anova(Fullup, best.model)
+```
+
+The P-Value is too large to say that there is a difference between the best model which utilizes four variables and the best model that utilizes two variables.
+
+
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+Based on the automated selection of variables there is no real difference in using a model with two variables versus using one with all of the variables.
+
+This was identified through a graphical depiction of the adjusted R Squared as well as the P-Values.  In conclusion, comparing the P-Values of the two variable models, the P-Value's were too small that I reject the null hypothesis that these models are beneficial in predicting the weight of the fish.  The P-Values associated with the annovas were large and therefore result in a failure to reject the null hypothesis, there is no difference between using the model with two variables versus the fullup models.
